[gd_scene load_steps=10 format=3 uid="uid://4n0ogsy4pqel"]

[ext_resource type="Script" path="res://addons/AWOC/Scenes/AWOCEditor/awoc_editor.gd" id="1_8jd62"]
[ext_resource type="PackedScene" uid="uid://hd74w6jps4nh" path="res://addons/AWOC/Scenes/CenterPanes/Welcome/WelcomePane.tscn" id="2_47nme"]
[ext_resource type="PackedScene" uid="uid://bong6fghk860t" path="res://addons/AWOC/Scenes/CenterPanes/Slots/SlotsPane.tscn" id="3_mgapg"]
[ext_resource type="PackedScene" uid="uid://b5cm2d4tq4hyk" path="res://addons/AWOC/Scenes/CenterPanes/Meshes/MeshesPane.tscn" id="4_vrbpa"]
[ext_resource type="PackedScene" uid="uid://bhjt3xvy74vk5" path="res://addons/AWOC/Scenes/CenterPanes/Materials/MaterialsPane.tscn" id="5_rkw2g"]
[ext_resource type="PackedScene" uid="uid://crx8ve13vi50r" path="res://addons/AWOC/Scenes/CenterPanes/Recipes/RecipesPane.tscn" id="6_m8vqy"]
[ext_resource type="PackedScene" uid="uid://0v5fv7esn0bs" path="res://addons/AWOC/Scenes/CenterPanes/Wardrobes/WardrobesPane.tscn" id="7_ousnc"]
[ext_resource type="PackedScene" uid="uid://b3i7oj7g4e2vn" path="res://addons/AWOC/Scenes/CenterPanes/Animations/AnimationsPane.tscn" id="8_6jbef"]
[ext_resource type="Theme" uid="uid://drffev6w87ljh" path="res://addons/AWOC/Themes/main_theme.tres" id="9_74ox4"]

[node name="AWOCEditor" type="Control" node_paths=PackedStringArray("slots_button", "meshes_button", "materials_button", "recipes_button", "wardrobes_button", "animations_button", "rightPane", "mainContainer")]
custom_minimum_size = Vector2(390, 300)
layout_mode = 3
anchor_right = 0.339
anchor_bottom = 0.463
offset_right = -0.528015
offset_bottom = -0.0240173
script = ExtResource("1_8jd62")
welcome_pane = ExtResource("2_47nme")
slots_pane = ExtResource("3_mgapg")
meshes_pane = ExtResource("4_vrbpa")
materials_pane = ExtResource("5_rkw2g")
recipes_pane = ExtResource("6_m8vqy")
wardrobes_pane = ExtResource("7_ousnc")
animations_pane = ExtResource("8_6jbef")
slots_button = NodePath("MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/SlotsButton")
meshes_button = NodePath("MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/MeshesButton")
materials_button = NodePath("MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/MaterialsButton")
recipes_button = NodePath("MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/RecipesButton")
wardrobes_button = NodePath("MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/WardrobesButton")
animations_button = NodePath("MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/AnimationsButton")
rightPane = NodePath("MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/RightPaneBackground/RightPaneScrollContainer/RightPane")
mainContainer = NodePath("MainScrollContainer/MainBackground/MainMarginContainer/MainContainer")

[node name="MainScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(390, 300)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainBackground" type="ColorRect" parent="MainScrollContainer"]
custom_minimum_size = Vector2(700, 400)
layout_mode = 2
color = Color(0, 0.0392157, 0, 1)

[node name="MainMarginContainer" type="MarginContainer" parent="MainScrollContainer/MainBackground"]
custom_minimum_size = Vector2(700, 217)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainContainer" type="HBoxContainer" parent="MainScrollContainer/MainBackground/MainMarginContainer"]
layout_mode = 2

[node name="AWOCMainContainer" type="VBoxContainer" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer"]
custom_minimum_size = Vector2(365, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="WelcomeButton" type="Button" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer"]
layout_mode = 2
theme = ExtResource("9_74ox4")
text = "AWOC"

[node name="AWOCBottomContainer" type="HBoxContainer" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LeftNavigation" type="VBoxContainer" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="SlotsButton" type="Button" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation"]
layout_mode = 2
theme = ExtResource("9_74ox4")
disabled = true
text = "Slots"

[node name="MeshesButton" type="Button" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation"]
layout_mode = 2
theme = ExtResource("9_74ox4")
disabled = true
text = "Meshes"

[node name="MaterialsButton" type="Button" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation"]
layout_mode = 2
theme = ExtResource("9_74ox4")
disabled = true
text = "Materials"

[node name="RecipesButton" type="Button" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation"]
layout_mode = 2
theme = ExtResource("9_74ox4")
disabled = true
text = "Recipes"

[node name="WardrobesButton" type="Button" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation"]
layout_mode = 2
theme = ExtResource("9_74ox4")
disabled = true
text = "Wardrobes"

[node name="AnimationsButton" type="Button" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation"]
layout_mode = 2
theme = ExtResource("9_74ox4")
disabled = true
text = "Animations"

[node name="RightPaneBackground" type="ColorRect" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer"]
custom_minimum_size = Vector2(285, 217)
layout_mode = 2
color = Color(1, 1, 1, 0.0196078)

[node name="RightPaneScrollContainer" type="ScrollContainer" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/RightPaneBackground"]
custom_minimum_size = Vector2(285, 217)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -183.0

[node name="RightPane" type="CenterContainer" parent="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/RightPaneBackground/RightPaneScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/WelcomeButton" to="." method="_on_welcome_button_pressed"]
[connection signal="pressed" from="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/SlotsButton" to="." method="_on_slots_button_pressed"]
[connection signal="pressed" from="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/MeshesButton" to="." method="_on_meshes_button_pressed"]
[connection signal="pressed" from="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/MaterialsButton" to="." method="_on_materials_button_pressed"]
[connection signal="pressed" from="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/RecipesButton" to="." method="_on_recipes_button_pressed"]
[connection signal="pressed" from="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/WardrobesButton" to="." method="_on_wardrobes_button_pressed"]
[connection signal="pressed" from="MainScrollContainer/MainBackground/MainMarginContainer/MainContainer/AWOCMainContainer/AWOCBottomContainer/LeftNavigation/AnimationsButton" to="." method="_on_animations_button_pressed"]
